# CaRA

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  LICENSE  Makefile  README.md  README.rst  bender_slurm.sh  cpora.sh  dim_experiment.py  fact_cp.py  model.py  noxfile.py  pyproject.toml  rank_experiment.py  requirements.txt  seed_run.sh  train_val.py  vtab.py  vtab_config.py
.github/workflows/: tests.yml
dataloader/: cifar.py  get_vtab1k.py  svhn.py
image_classification/: dim_experiment.py  vit_cp.py  vtab.py  vtab_config.py
models/classification/: README.md  vision_transformer.py
notebook/: 4d_einsum_implementation.py  MLP_forward_pass.ipynb  QKV_Combined_forwardpass.ipynb
scripts/: dataloader.py  marvin_slurm.sh  run_dim_exps.sh  train.py
src/cara/: __init__.py  cara.py
src/cpda/: cpda.py  nn.py  utils.py
tests/: defaults.py  test_cara.py  test_cpda.py  test_nn.py  test_utilities.py
